--- a/src/components/Main.scss
+++ b/src/components/Main.scss
@@ -2,8 +2,10 @@
 
 .Main {
   border: 1px solid rgb(255, 0, 234);
+  height: 100%;
   width: 100%;
   padding: 1rem;
-  overflow: scroll;
+  overflow-x: hidden;
+  overflow-y: scroll;
   @include custom-scrollbar;
 }
