--- a/src/components/PostList.scss
+++ b/src/components/PostList.scss
@@ -1,8 +1,8 @@
 @import "../styles/global.scss";
 
 .PostList {
-  height: 90vh;
-  min-width: 20rem;
+  height: 100%;
+  min-width: 100%;
   overflow-x: hidden;
   overflow-y: scroll;
   // border: 1px solid $white;
