--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -8,6 +8,6 @@
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: $navy-3;
+    background-color: $orange;
   }
 }
